test/parser/should_succeed/until3.souc
main() = do
	until true do
		print "sub call"
		explode
