test/parser/should_fail/until4.souc
main() = do
    until true do
        print "sub call"
        else
            explode
end until
